# 2Dto3D_with_m0609

./: .gitignore  README.md  camera_manager.py  dataset_manager.py  downsampled_points.json  final_center_grasps.json  final_graps.py  grasp_points.json  m0609_3way_scan.py  m0609_scan.py  m0609_scan_hardcoding.py  m0609_scan_movit.py  mesh_data.py  mesh_grasp_points.json  mesh_pose.py  mesh_voxel.py  moveit_test.py  structured_voxel_grasp.json  voxel_data.py
3d_ws/src/3dgs_pkg/: package.xml  setup.cfg  setup.py
3d_ws/src/3dgs_pkg/3dgs_pkg/: enhanced_mediapipe_pose.py  feature_splat_config.py  feature_splat_dataparser.py  feature_splat_model.py  ply_to_obj_node.py  pyproject.toml  stt_whisper_node.py  train_node.py  train_node_feature.py
3d_ws/src/3dgs_pkg/3dgs_pkg/utils/: mesh_processor.py
3dgs/: train_node.py
3dgs/utils/: mesh_processor.py
Database/: db_manager.py  mission_starter.py  test_starter.py
LLM Model &Florence2/: Llama 3 8B&Florence2.ipynb  Phi-3-mini-4k &Florence2.ipynb  Qwen2.5-1.5B &Florence2.ipynb  gemma-2-2b-it&Florence2.ipynb
Tools/: README.md  auto_capture.py  capture.py  yolo_compare.html  yolo_test.py
YOLO/: yolo26n.ipynb
src/eod_detection/: package.xml  setup.cfg  setup.py
src/eod_detection/eod_detection/: analyzer_node.py  camera_manager.py  dataset_manager.py  manipulator_node.py  (+4 more)
src/eod_mesh_manager/: CMakeLists.txt  package.xml
src/eod_mesh_manager/src/: mesh_manager_node.cpp
supersplat/: package-lock.json  package.json
supersplat/src/: 2Dto3D_with_m0609.code-workspace  main.ts
supersplat/static/: grasp_points.json
(+2 files in other folders)
